make sure nav box does not get covered up by other elements

--- a/chrome_extension/red.css
+++ b/chrome_extension/red.css
@@ -62,6 +62,7 @@
 }
 
 .riotNav {
+	z-index: 999;
 	position: fixed;
 	background-color : #2F4F4F;
 	top : 215px;
